Fix overflow

--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -19,6 +19,7 @@
     margin-bottom:20px;
     padding-top:0px;
     padding-bottom:40px;
+    overflow:auto;
     white-space: pre-wrap; /* css-3 */    
     word-wrap: break-word; /* Internet Explorer 5.5+ */
 }
